<resources>
    <string name="app_name">Застройщики</string>
    <string name="search_text">Введите название компании</string>
    <string name="search">Поиск</string>
    <string name="add_review">Добавить отзыв</string>
    <string name="projects">Проекты</string>
    <string name="reviews">Отзывы</string>
    <string name="info">Информация</string>
    <string name="phone">Телефон:</string>
    <string name="address">Адрес:</string>
    <string name="site">Сайт:</string>
    <string name="description">Описание:</string>
    <string name="positive">Положительные стороны:</string>
    <string name="general_emotion">Общее впечатление:</string>
    <string name="negative">Отрицательные стороны:</string>
    <string name="no_reviews">Отзывов пока нет, вы можете оставить первый</string>
    <string name="date_done">Сдача</string>
    <string name="price">Цена</string>
    <string name="class_building">Класс</string>
    <string name="registry">Регистрация</string>
    <string name="create_account">Создать учетную запись</string>
    <string name="auth">Авторизация</string>
    <string name="enter">Войти</string>
    <string name="wish_name">Желаемое имя</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="exit">выход</string>
    <string name="email">Почта</string>
    <string name="in_progress_text">Отзыв находится на рассмотрении модератором и виден только Вам</string>
    <string name="choose_region">выбор региона</string>
    <string name="error_text">Ошибка:</string>
    <string name="ok">ОК</string>
    <string name="repeat">Повторить</string>
    <string name="uups_error">Упс, произошла ошибка</string>
    <string name="cancel">Отмена</string>
    <string name="all_regions">Все регионы</string>
    <string name="from_five">%1$d из 5</string>
    <string name="admin">Админ</string>
    <string name="submit">Утвердить</string>
    <string name="deny">Отказать</string>
</resources>
