<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="52dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="8dp"
            tools:src="@drawable/ic_review_add" />

        <TextView
            android:id="@+id/tvPhoneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            app:layout_constraintTop_toBottomOf="@+id/tvPhoneText"
            tools:text="89023422324" />


        <TextView
            android:id="@+id/tvAddressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvPhone" />


        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvAddressText"
            tools:text="Комсомола, 19" />


        <TextView
            android:id="@+id/tvSiteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/site"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress" />


        <TextView
            android:id="@+id/tvSiteUrl"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:autoLink="web"
            app:layout_constraintTop_toBottomOf="@+id/tvSiteText"
            tools:text="https://asldfjsaldkfj.ru" />

        <TextView
            android:id="@+id/tvDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvSiteUrl" />


        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionText"
            tools:text="kldsafhsjakdfhkjsadhf" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
